# rust-analyzer-downloader

./: Cargo.toml
src/: main.rs
