[package]
name = "rust-analyzer-updater"
version = "0.1.0"
authors = ["Rodrigo Valin <licorna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_derive = "1.0.104"
serde = "1.0.104"
serde_json = "1.0.48"
anyhow = "1.0"
dirs = "2.0.2"
